--- a/pvz/makefile
+++ b/pvz/makefile
@@ -1,6 +1,7 @@
+
 # Esto nos ayuda a posicionar nuestros config files en una carpeta dentro de nuestro proyecto
 
-CONFIG_PATH=${HOME}/sync/Documents/septimo_semestre/computoDistribuido/0243416_SistemasDistribuidos/pvz/.pvz/
+CONFIG_PATH=${HOME}/sync/Documents/septimo_semestre/computoDistribuido/0243416_SistemasDistribuidos/pvz/.pvz
 
 .PHONY: init
 
@@ -14,19 +15,37 @@ init:
 # Finally we create the client certificate this allows two way authentication
 gencert:
 	cfssl gencert \
-		-initca certificates/ca-csr.json | cfssljson -bare ca
+		-initca test/ca-csr.json | cfssljson -bare ca
+
 	cfssl gencert \
 		-ca=ca.pem \
 		-ca-key=ca-key.pem \
-		-config=certificates/ca-config.json \
+		-config=test/ca-config.json \
 		-profile=server \
-		certificates/server-csr.json | cfssljson -bare server
+		test/server-csr.json | cfssljson -bare server
+
 	cfssl gencert \
 		-ca=ca.pem \
 		-ca-key=ca-key.pem \
-		-config=certificates/ca-config.json \
+		-config=test/ca-config.json \
 		-profile=client \
-		certificates/client-csr.json | cfssljson -bare client
+		test/client-csr.json | cfssljson -bare client
+
+	cfssl gencert \
+		-ca=ca.pem \
+		-ca-key=ca-key.pem \
+		-config=test/ca-config.json \
+		-profile=client \
+		-cn="root" \
+		test/client-csr.json | cfssljson -bare root-client
+
+	cfssl gencert \
+		-ca=ca.pem \
+		-ca-key=ca-key.pem \
+		-config=test/ca-config.json \
+		-profile=client \
+		-cn="nobody" \
+		test/client-csr.json | cfssljson -bare nobody-client
 	mv *.pem *.csr ${CONFIG_PATH}
 
 compile:
@@ -34,7 +53,8 @@ compile:
 					--go_out=.\
 					--go_opt=paths=source_relative \
 					--proto_path=.
-test:
+
+test: $(CONFIG_PATH)/policy.csv $(CONFIG_PATH)/model.conf
 	go test -race ./...
 compile_rpc:
 	protoc api/v1/*.proto \
@@ -42,3 +62,4 @@ compile_rpc:
 	--go_opt=paths=source_relative \
     --go-grpc_out=. \
 	--go-grpc_opt=paths=source_relative \
+	--proto_path=.
